fix(locale): Fix locale not init and update
Fix locale not init and update:
* Fix locale not init when app start.
* Fix not translated texts.
* Fix locales not updates in app navigation bar texts.

--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -65,6 +65,6 @@
   "rootPage": {
     "initFailed": "初始化失败: $err",
     "initializingData": "正在初始化数据",
-    "initFinished": "Init finished"
+    "initFinished": "初始化完成"
   }
 }
