feat(*): Init profile page and support logout

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -9,6 +9,7 @@
   "navigation": {
     "homepage": "Home",
     "topics": "Topics",
+    "profile": "Profile",
     "settings": "Settings"
   },
   "homepage": {
