fix(screens): Fix login screen missing app bar

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -41,7 +41,8 @@
     }
   },
   "loginPage": {
-    "login": "Login",
+    "title": "Login TSDM",
+    "login": "TSDM",
     "username": "Username",
     "usernameEmpty": "Username should not be empty",
     "password": "Password",
