--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -41,6 +41,7 @@
     }
   },
   "loginPage": {
+    "title": "登录天使动漫",
     "login": "登录",
     "username": "用户名",
     "usernameEmpty": "用户名不能为空",
