fix(i18n): Fix settings page select language dialog title translation

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -36,7 +36,7 @@
       "languages": {
         "title": "Languages",
         "followSystem": "Follow System",
-        "selectLanguage": "选择语言"
+        "selectLanguage": "Select Language"
       }
     }
   },
