feat(widgets): Update ForumCard layout and i18n

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -97,5 +97,9 @@
     "checkInNextLevel": "Check-in Next Level",
     "checkInNextLevelDays": "Days To Next Check-in Level",
     "checkInTodayStatus": "Check-in Today Status"
+  },
+  "forumCard": {
+    "links": "Links",
+    "subForums": "Subreddit"
   }
 }
