--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -97,5 +97,9 @@
     "checkInNextLevel": "下个签到等级",
     "checkInNextLevelDays": "距离下个签到等级天数",
     "checkInTodayStatus": "今日签到状态"
+  },
+  "forumCard": {
+    "links": "链接",
+    "subForums": "子版块"
   }
 }
