--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -38,7 +38,23 @@
         "followSystem": "跟随系统",
         "selectLanguage": "选择语言"
       }
+    },
+    "othersSection": {
+      "title": "其他",
+      "about": "关于"
     }
+  },
+  "aboutPage": {
+    "title": "关于",
+    "whatIsThis": "这是？",
+    "description": "跨平台的天使动漫非官方客户端",
+    "packageName": "包名",
+    "homepage": "主页",
+    "findOnGithub": "在Github上",
+    "version": "软件版本",
+    "flutterVersion": "Flutter版本",
+    "dartVersion": "Dart版本",
+    "license": "版权"
   },
   "loginPage": {
     "title": "登录天使动漫",
