--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -47,9 +47,10 @@
   "aboutPage": {
     "title": "關於",
     "whatIsThis": "這是？",
-    "description": "跨平台的天使動漫非官方客戶端",
+    "description": "跨平台的天使動漫論壇非官方客戶端",
     "packageName": "包名",
-    "homepage": "首頁",
+    "forumHomepage": "論壇首頁",
+    "homepage": "軟體首頁",
     "findOnGithub": "在Github上",
     "version": "軟體版本",
     "flutterVersion": "Flutter版本",
