feat(widgets): NetworkList add menu in app bar

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -118,5 +118,11 @@
   "forumCard": {
     "links": "Links",
     "subForums": "Subreddit"
+  },
+  "networkList": {
+    "actionRefresh": "Refresh",
+    "actionCopyUrl": "Copy Url",
+    "actionOpenInBrowser": "Open In Browser",
+    "actionBackToTop": "Back To Top"
   }
 }
