feat(screens): About page add copy info button

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -55,7 +55,8 @@
     "version": "App Version",
     "flutterVersion": "Flutter Version",
     "dartVersion": "Dart Version",
-    "license": "License"
+    "license": "License",
+    "copiedToClipboard": "Copied to clipboard"
   },
   "loginPage": {
     "title": "Login TSDM",
