--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -123,7 +123,9 @@
   },
   "threadPage": {
     "sendReplyHint": "Reply...",
-    "sendReply": "Reply"
+    "sendReply": "Reply",
+    "replySuccess": "Reply success",
+    "replyFailed": "Failed to reply: $err"
   },
   "forumCard": {
     "links": "Links",
