feat(*): Parse subreddit and refactor
Parse subreddit and refactor:
* Parse and show subreddit in forum pages.
* Separate thread list in forum page to another tab view.
* Automatically switch to subreddit page when no thread parsed from web
  page.
* Use separate EasyRefresh instead of NetworkList in forum page.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -121,6 +121,16 @@
     "checkInNextLevelDays": "Days To Next Check-in Level",
     "checkInTodayStatus": "Check-in Today Status"
   },
+  "forumPage": {
+    "threadTab": {
+      "title": "Thread",
+      "noThread": "No Thread"
+    },
+    "subredditTab": {
+      "title": "Subreddit",
+      "noSubreddit": "No Subreddit"
+    }
+  },
   "threadPage": {
     "sendReplyHint": "Reply...",
     "sendReply": "Reply",
