feat(*): Show toast when load page failed
Show toast when load page failed:
* Show toast when load thread or forum page failed instead of snack bar.
* Retry when load forum page or thread page failed.
* Remove unused `initialData` in `PostList`.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -5,7 +5,8 @@
     "ok": "Ok",
     "cancel": "Cancel",
     "needLoginToSeeThisPage": "Need to login to see this page",
-    "pleaseWait": "Please wait"
+    "pleaseWait": "Please wait",
+    "loadFailedAndRetry": "Load failed, retrying"
   },
   "navigation": {
     "homepage": "Home",
