--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -5,7 +5,8 @@
     "ok": "确定",
     "cancel": "取消",
     "needLoginToSeeThisPage": "登录后才能访问此页面",
-    "pleaseWait": "请稍候"
+    "pleaseWait": "请稍候",
+    "loadFailedAndRetry": "加载失败，正在重试"
   },
   "navigation": {
     "homepage": "主页",
