--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -5,7 +5,8 @@
     "ok": "確定",
     "cancel": "取消",
     "needLoginToSeeThisPage": "登入後才能存取此頁面",
-    "pleaseWait": "請稍候"
+    "pleaseWait": "請稍候",
+    "loadFailedAndRetry": "載入失敗，正在重試"
   },
   "navigation": {
     "homepage": "首頁",
