--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -6,7 +6,8 @@
     "cancel": "取消",
     "needLoginToSeeThisPage": "登入後才能存取此頁面",
     "pleaseWait": "請稍候",
-    "loadFailedAndRetry": "載入失敗，正在重試"
+    "loadFailedAndRetry": "載入失敗，正在重試",
+    "noMoreData": "已經到頭了"
   },
   "navigation": {
     "homepage": "首頁",
