feat(ui): Support show notice
Support show notice:
* Show notice of current user.
* Private message not support yet.
* Due to web page features, this is no proper way to tell "unread"
  notice and "read" notice.
* This commit only add code to show notice, notice detail and reply
  are not implemented.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -146,6 +146,16 @@
     "replySuccess": "Reply success",
     "replyFailed": "Failed to reply: $err"
   },
+  "noticePage": {
+    "title": "Notifications",
+    "noticeTab": {
+      "title": "Notice",
+      "replyBody": "replied in $threadTitle"
+    },
+    "messageTab": {
+      "title": "Messages"
+    }
+  },
   "forumCard": {
     "links": "Links",
     "subForums": "Subreddit"
