feat(*): Init support to redirect to thread in notice page
Init support to redirect to thread in notice page:
* This commit init the ui and logic to show related post info in notice.
* But there is an exception when fetching redirect url which is believed
  to be an error in dart-sdk because `curl` runs without error.
* Next using curl to get this request is a not proper way, if we do so,
  we need to add a curl dependency in app and that will increase app
  size by 2 MB or more.

--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -153,7 +153,10 @@
       "replyBody": "在 $threadTitle 中回复了"
     },
     "messageTab": {
-      "title": "消息"
+      "title": "回复"
+    },
+    "replyPage": {
+      "title": "Reply"
     }
   },
   "forumCard": {
