--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -154,6 +154,9 @@
     },
     "messageTab": {
       "title": "Messages"
+    },
+    "replyPage": {
+      "title": "Reply"
     }
   },
   "forumCard": {
