--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -154,6 +154,9 @@
     },
     "messageTab": {
       "title": "訊息"
+    },
+    "replyPage": {
+      "title": "回覆"
     }
   },
   "forumCard": {
