feat(*): Support login with additional question challenge

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -79,6 +79,8 @@
     "usernameEmpty": "Username should not be empty",
     "password": "Password",
     "passwordEmpty": "Password should not be empty",
+    "answer": "Answer",
+    "answerEmpty": "Answer should not be empty",
     "verifyCode": "Verification code",
     "verifyCodeEmpty": "Verification code should not be empty",
     "failedToLoginStatusCode": "Failed to login: StatusCode=$code",
@@ -86,6 +88,7 @@
     "loginResultSuccess": "Login success",
     "loginResultIncorrectCaptcha": "Incorrect verification code",
     "loginResultMaybeInvalidUsernameOrPassword": "Maybe invalid username or password",
+    "loginResultIncorrectQuestionOrAnswer": "Incorrect login question or answer",
     "loginResultTooManyLoginAttempts": "Too many login attempts",
     "loginResultOtherErrors": "Other error",
     "loginResultUnknown": "Unknown login result",
