--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -79,6 +79,8 @@
     "usernameEmpty": "用户名不能为空",
     "password": "密码",
     "passwordEmpty": "密码不能为空",
+    "answer": "安全问题的答案",
+    "answerEmpty": "安全问题的答案不能为空",
     "verifyCode": "验证码",
     "verifyCodeEmpty": "验证码不能为空",
     "failedToLoginStatusCode": "登录失败: 状态码=$code",
@@ -86,6 +88,7 @@
     "loginResultSuccess": "登录成功",
     "loginResultIncorrectCaptcha": "验证码错误",
     "loginResultMaybeInvalidUsernameOrPassword": "可能是由于用户名或密码错误",
+    "loginResultIncorrectQuestionOrAnswer": "安全问题或密码不正确",
     "loginResultTooManyLoginAttempts": "登录尝试次数过多",
     "loginResultOtherErrors": "其他错误",
     "loginResultUnknown": "未知的登录结果",
