--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -79,6 +79,8 @@
     "usernameEmpty": "使用者名稱不能為空",
     "password": "密碼",
     "passwordEmpty": "密碼不能為空",
+    "answer": "安全問題的答案",
+    "answerEmpty": "安全問題的答案不能為空",
     "verifyCode": "驗證碼",
     "verifyCodeEmpty": "驗證碼不能為空",
     "failedToLoginStatusCode": "登入失敗: 狀態碼=$code",
@@ -86,6 +88,7 @@
     "loginResultSuccess": "登入成功",
     "loginResultIncorrectCaptcha": "驗證碼錯誤",
     "loginResultMaybeInvalidUsernameOrPassword": "可能是因為使用者名稱或密碼錯誤",
+    "loginResultIncorrectQuestionOrAnswer": "安全性問題或密碼不正確",
     "loginResultTooManyLoginAttempts": "登入嘗試次數過多",
     "loginResultOtherErrors": "其他錯誤",
     "loginResultUnknown": "未知的登入結果",
