feat(*): Support purchase threads

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -185,5 +185,17 @@
     "struggling": "Struggling",
     "lazy": "Lazy",
     "unlucky": "Unlucky"
+  },
+  "lockedCard": {
+    "title": "Some content requires purchase",
+    "purchasedInfo": "$num people have purchased this article",
+    "failedPurchase": "Can not purchase",
+    "failedParsingPurchase": "Failed when parsing purchase info",
+    "failedParsingConfirmInfo": "Failed when parsing purchase confirm info",
+    "failedPurchaseMessage": "Purchase failed: $message",
+    "confirmPurchase": "Confirm purchase",
+    "confirmInfo": "Purchase from $author with is price $price.\nThe author will get $authorProfit coins.\nYou will have $coinsLast coins left after purchase",
+    "successPurchase": "Purchase success",
+    "successPurchaseInfo": "Will refresh this page"
   }
 }
