feat(ui): Support scored notice in notice page
Support scored notice in notice page:
* Need to use sealed class to refactor notice types.
* Do not allow to redirect to scored post page currently.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -153,7 +153,8 @@
     "title": "Notifications",
     "noticeTab": {
       "title": "Notice",
-      "replyBody": "replied in $threadTitle"
+      "replyBody": "replied in $threadTitle",
+      "scoreBody": "scored your thread in $threadTitle $score"
     },
     "messageTab": {
       "title": "Messages"
