--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -153,7 +153,8 @@
     "title": "通知",
     "noticeTab": {
       "title": "提醒",
-      "replyBody": "在 $threadTitle 中回覆了"
+      "replyBody": "在 $threadTitle 中回覆了",
+      "scoreBody": "在 $threadTitle 中給您的帖子評分 $score"
     },
     "messageTab": {
       "title": "訊息"
