--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -198,5 +198,9 @@
     "confirmInfo": "从 $author 处以 $price 个天使币的价格购买帖子。\n作者会得到 $authorProfit 个天使币。\n购买后你还有 $coinsLast 个天使币。",
     "successPurchase": "购买成功",
     "successPurchaseInfo": "即将刷新页面"
+  },
+  "rateCard": {
+    "title": "评分记录（$userCount）",
+    "total": "总计: $total"
   }
 }
