feat(*): Parse metion notice
Parse metion notice:
* Parse mentions.
* Allow redirect to reply page (actually should show post details) for
  rate type notices.
* Rename notice type "score" to "rate".

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -154,7 +154,8 @@
     "noticeTab": {
       "title": "Notice",
       "replyBody": "replied in $threadTitle",
-      "scoreBody": "scored your thread in $threadTitle $score"
+      "rateBody": "scored your thread in $threadTitle $score",
+      "mentionBody": "mentioned you in thread"
     },
     "messageTab": {
       "title": "Messages"
