--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -154,7 +154,8 @@
     "noticeTab": {
       "title": "提醒",
       "replyBody": "在 $threadTitle 中回复了",
-      "scoreBody": "在 $threadTitle 中给您的帖子评分 $score"
+      "rateBody": "在 $threadTitle 中给您的帖子评分 $score",
+      "mentionBody": "在帖子中提到了你"
     },
     "messageTab": {
       "title": "消息"
