--- a/lib/i18n/strings_zh-TW.i18n.json
+++ b/lib/i18n/strings_zh-TW.i18n.json
@@ -154,7 +154,8 @@
     "noticeTab": {
       "title": "提醒",
       "replyBody": "在 $threadTitle 中回覆了",
-      "scoreBody": "在 $threadTitle 中給您的帖子評分 $score"
+      "rateBody": "在 $threadTitle 中給您的帖子評分 $score",
+      "mentionBody": "在話題中提到了你"
     },
     "messageTab": {
       "title": "訊息"
