feat(screens): Distinguish notice types
Distinguish notice types:
* Rename `ReplyPage` to `NoticeDetailPage`.
* For rate type notices, only show post data when user pressed notice
  card and route pushed to `NoticeDetailPage`.
* Distinguish notice types (and title) in `NoticeDetailPage`.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -160,8 +160,10 @@
     "messageTab": {
       "title": "Messages"
     },
-    "replyPage": {
-      "title": "Reply"
+    "noticeDetailPage": {
+      "titleReply": "Reply",
+      "titleRate": "Rate info",
+      "titleMention": "Reply mention"
     }
   },
   "searchPage": {
