feat(screens): Show info message if reply user is blocked

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -163,7 +163,8 @@
     "noticeDetailPage": {
       "titleReply": "Reply",
       "titleRate": "Rate info",
-      "titleMention": "Reply mention"
+      "titleMention": "Reply mention",
+      "postNotFound": "Content not found, user may be blocked"
     }
   },
   "searchPage": {
