--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -163,7 +163,8 @@
     "noticeDetailPage": {
       "titleReply": "回复",
       "titleRate": "评分详情",
-      "titleMention": "回复提及"
+      "titleMention": "回复提及",
+      "postNotFound": "找不到内容，用户可能正处于禁言状态"
     }
   },
   "searchPage": {
