i18n(*): Update message info when post not found
Update message info when post not found:
* The post is missing, maybe because the user is block, and maybe not.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -164,7 +164,7 @@
       "titleReply": "Reply",
       "titleRate": "Rate info",
       "titleMention": "Reply mention",
-      "postNotFound": "Content not found, user may be blocked"
+      "postNotFound": "Content not found"
     }
   },
   "searchPage": {
