--- a/lib/i18n/strings_zh-CN.i18n.json
+++ b/lib/i18n/strings_zh-CN.i18n.json
@@ -164,7 +164,7 @@
       "titleReply": "回复",
       "titleRate": "评分详情",
       "titleMention": "回复提及",
-      "postNotFound": "找不到内容，用户可能正处于禁言状态"
+      "postNotFound": "找不到内容"
     }
   },
   "searchPage": {
