feat(*): Add settings to control shortcut entries in forum card
Add settings to control shortcut entries in forum card:
* Disabled by default.

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -40,6 +40,10 @@
         "title": "Languages",
         "followSystem": "Follow System",
         "selectLanguage": "Select Language"
+      },
+      "showShortcutInForumCard": {
+        "title": "Forum Card Shortcut Entries",
+        "detail": "Show shortcut entries towards latest thread and subreddits in forum card"
       }
     },
     "checkInSection": {
