feat(*): Add page to show user's thread and reply

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -192,6 +192,15 @@
       "noData": "No Data"
     }
   },
+  "myThreadPage": {
+    "title": "My Thread",
+    "threadTab": {
+      "title": "Thread"
+    },
+    "replyTab": {
+      "title": "ReplyThread"
+    }
+  },
   "forumCard": {
     "links": "Links",
     "subForums": "Subreddit"
